# pvess-calc

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  PHASE_D.md  PHASE_EFGHI.md  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml
.agents/skills/pvess-review/: SKILL.md
.agents/skills/pvess-roof-topology-vision/: SKILL.md
.claude/skills/pvess-visual-polish/: SKILL.md
.github/workflows/: ci.yml  docs.yml
deploy/reelamate/: .env.example  Caddyfile  README.md  docker-compose.yml
deploy/reelamate/local-tunnel/: .env.example  P0_RUNBOOK.md  README.md  backup-local.sh  cloudflared-config.example.yml  configure-cloudflare-access.sh  health-check-curl.sh  install-p1-launchagents.sh  online-smoke-curl.sh  restore-drill.sh  run-local.sh
docs/: DESIGN.md  TESTING.md  deploying.md  index.md  quickstart.md  web-deployment.md  web-ui-language.md  web-ui.md
docs/recipes/: add-ahj-profile.md  add-lookup-provider.md  add-nec-edition.md
docs/reference/: cli.md  doctor-checks.md  schema.md
docs/workflow/: design.md  intake.md  submit.md  verify.md
projects/001-demo-austin/: inputs.yaml
projects/002-phoenix-25kw/: inputs.yaml
projects/003-frisco-glasshouse/: inputs.yaml  simulated-site-data.yaml
projects/003-frisco-glasshouse-roof-merged/: inputs.yaml
projects/003-frisco-glasshouse/cut_sheets/: SOURCES.md
scripts/: pvess-review  pvess-visual-benchmark  pvess-visual-iterate
src/pvess_calc/: cli.py  cli_root.py  doctor.py  schema.py
src/pvess_calc/ahj/: __init__.py  profile.py
src/pvess_calc/calc/: adjacent.py  aic.py  conductor.py  engine.py  ess.py  ess_install.py  face_distribution.py  geometry.py  grounding.py  interconnect.py  mask_contour.py  module_placement.py  ocpd.py  orientation.py  polygon.py  pv_string.py  roof_layout.py  site_layout.py  string_assignment.py  value_weighted.py  voltage_drop.py  wire_routing.py
src/pvess_calc/compare/: __init__.py  bom.py  pdf.py  report.py  scenarios.py
src/pvess_calc/customer/: __init__.py  backup.py  charts.py  design_tokens.py  economics.py  pdf.py  production.py  quote_tiers.py  roof_diagram.py  roof_satellite.py
src/pvess_calc/devices/: __init__.py  batteries.py  inverters.py  modules.py  optimizers.py
src/pvess_calc/dxf/: _textfit.py  grounding_sheet.py  one_line.py  render.py  (+4 more)
tests/: conftest.py  test_cli_root.py  test_compare.py  test_compare_pdf.py  test_conductor.py  test_customer.py  test_doctor.py  test_dxf.py  test_ee4_k13.py  test_ee4_k131_polish.py  test_ee4_stage6_satellite.py  test_ee4_stage9_vector_trace.py  test_ee4_wyssling.py  test_ee4a_property_context.py  test_end_to_end.py  test_ess_install.py  test_geometry.py  test_grounding.py  test_grounding_k5.py  test_interconnect.py  test_k12_cover.py  test_k12_schema.py  test_k6_polish.py  test_labels.py  test_lookup.py  test_lookup_online.py  test_mask_contour.py  test_module_placement.py  test_orientation.py  test_panel_placement_qa.py  test_permit_ahj.py  test_phase_d.py  test_phase_hi.py  test_polygon.py  test_production.py  test_pv4_v2.py  test_pv6_string_layout.py  test_pv_string.py  test_qet_elements.py  test_qet_inject.py  (+22 more)
(+116 files in other folders)
